--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <img class="profile-img" src="meee.jpg" alt="Mary Hope Niro">
     <div class="profile-info">
       <h1>Mary Hope Niro</h1><h2>Data Analyst</h2>
-      <p>Junior Data Analyst passionate about transforming data into actionable insights that drive decision-making.</p>
+      <p>An aspiring Data Analyst passionate about transforming data into actionable insights that drive decision-making.</p>
       <a class="download-btn" href="CV.pdf" download>Download CV</a>
       <div class="social-links">
         <a href="https://www.facebook.com/nirohope"><i class="fab fa-facebook-square"></i></a>
@@ -217,7 +217,7 @@
   </section>
   <section id="projects" class="projects">
     <div style="width:100%;max-width:1200px;margin:0 auto;display:flex;flex-direction:column;align-items:center;">
-      <h2>My Works</h2>
+      <h2>Projects</h2>
       <div class="carousel-container">
         <button class="carousel-btn left" onclick="scrollCarousel(-1)">
           <i class="fas fa-chevron-left"></i>
