--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
   <section id="profile" class="profile">
     <img class="profile-img" src="meee.jpg" alt="Mary Hope Niro">
     <div class="profile-info">
-      <h1>Mary Hope Niro</h1><h2>Data Analyst</h2>
-      <p>An aspiring Data Analyst passionate about transforming data into actionable insights that drive decision-making.</p>
-      <a class="download-btn" href="CV.pdf" download>Download CV</a>
+      <h1>Mary Hope Niro</h1><h2>Student</h2>
+      <p>IT student seeking on-the-job training to gain hands-on experience and develop practical skills while contributing to team tasks</p>
+      <a class="download-btn" href="cv.pdf" download>Download CV</a>
       <div class="social-links">
         <a href="https://www.facebook.com/nirohope"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.instagram.com/nirohopee"><i class="fab fa-instagram"></i></a>
@@ -326,3 +326,4 @@
   </script>
 </body>
 </html>
+
